argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-website
  annotations:
    keel.sh/policy: force
spec:
  selector:
    matchLabels:
      app: personal-website
  template:
    metadata:
      labels:
        app: personal-website
    spec:
      containers:
      - name: personal-website
        image: lilshan24/personal-website
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 200m
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 1
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 1
