argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website
spec:
  selector:
    app: personal-website
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
