argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-website
spec:
  rules:
  - host: ishan.everestsummitpm.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personal-website
            port:
              number: 80
